Add and disable --fast flag for go lint

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "go.lintTool": "golangci-lint",
-    "go.lintFlags": [],
+    "go.lintFlags": [
+        // "--fast"
+    ],
     "go.lintOnSave": "file"
 }
